Closed Bug 1003320 Opened 11 years ago Closed 11 years ago

http/2 doesn't send HPACK-level ack of table size changes

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: u408661, Assigned: u408661)

References

Details

(Whiteboard: [spdy])

Attachments

(1 file)

Attached patch patchSplinter Review
I wondered why Herve added that to the HPACK spec, seemed like a duplication of effort, to me. But (b/c of Jeff's emails), Martin explained it to me yesterday, so I figured I'd fix it. This patch was built on top of the draft12, but it applies (conceivably) to draft10, which is currently in nightly. I vote we just land draft11, draft12, and this all together.
Attachment #8414630 - Flags: review?(mcmanus)
Comment on attachment 8414630 [details] [diff] [review] patch Review of attachment 8414630 [details] [diff] [review]: ----------------------------------------------------------------- cset comment s/SETTINGS_MAX_BUFFER_SIZE/SETTINGS_HEADER_TABLE_SIZE/
Attachment #8414630 - Flags: review?(mcmanus) → review+
Depends on: 1001022
Thanks, Pat! Got a couple errands to run, then a quick interop with twitter, and then I'll land draft11+draft12+this later tonight (PDT).
:hurley, I've just been running the latest (as of this minute) stuff from your draft-12 against twitter.com. It just works! I've run curl+nghttp2 against twitter with the same success, so there's that level of interop at least...
:bagder - good to know. I'll still want to test with the changes I'm making based in review comments, as well as this patch (it's in a different branch from draft12) to be sure, but your report is a promising sign!
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: