Bug 1003320 - Send HPACK buffer size updates when receiving SETTINGS_HEADER_TABLE_SIZE. r=mcmanus